; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_esc.c_ESC_AddEscRts2.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_esc.c_ESC_AddEscRts2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@esc_address = common dso_local global i64* null, align 8
@esc_function = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ESC_AddEscRts2(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* %4, align 8
  %8 = load i64*, i64** @esc_address, align 8
  %9 = load i64, i64* %5, align 8
  %10 = getelementptr inbounds i64, i64* %8, i64 %9
  store i64 %7, i64* %10, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32*, i32** @esc_function, align 8
  %13 = load i64, i64* %5, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  store i32 %11, i32* %14, align 4
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @MEMORY_dPutByte(i64 %15, i64 210)
  %17 = load i64, i64* %4, align 8
  %18 = add nsw i64 %17, 1
  %19 = load i64, i64* %5, align 8
  %20 = call i32 @MEMORY_dPutByte(i64 %18, i64 %19)
  ret void
}

declare dso_local i32 @MEMORY_dPutByte(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
